# wyas48h

./: CHANGELOG.md  wyas48h.cabal
app/: Main.hs
src/: Common.hs  Evaluator.hs  Lib.hs  Main.hs  Parser.hs
test/: CommonSpec.hs  EvaluatorSpec.hs  ParserSpec.hs  Spec.hs
