cabal-version:      2.2
name:               wyas48h
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/wyas48h#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2025 Author name here
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:  Lib
  hs-source-dirs:   src
  other-modules:
    Common
    Parser
    Evaluator
    Paths_wyas48h

  autogen-modules:  Paths_wyas48h
  default-language: Haskell2010
  build-depends:
    , base    >=4.7 && <5
    , mtl
    , parsec

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

executable wyas48h-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  other-modules:    Paths_wyas48h
  autogen-modules:  Paths_wyas48h
  default-language: Haskell2010
  build-depends:
    , base     >=4.7 && <5
    , mtl
    , wyas48h

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

test-suite wyas48h-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:
    ParserSpec
    EvaluatorSpec
    Paths_wyas48h

  autogen-modules:  Paths_wyas48h
  default-language: Haskell2010
  build-depends:
    , base     >=4.7 && <5
    , hspec
    , parsec
    , mtl
    , wyas48h

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N
